--- a/model.ipynb
+++ b/model.ipynb
@@ -2594,28 +2594,325 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def weighted_average(df, weights):\n",
+    "    assert df.shape[1] == len(weights)\n",
+    "    res = np.zeros(df.shape[0])\n",
+    "    for i in range(len(weights)):\n",
+    "        res += df.iloc[:, i].values * weights[i] / sum(weights)\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "def inference_stage(configs, predictors, test_df, threshold_mode, threshold_params={}):\n",
+    "    thresholds_all = []\n",
+    "    model_names = []\n",
+    "    for icfg, (cfg, pred) in enumerate(zip(configs, predictors)):\n",
+    "        results, thresholds = pred.inference_block(\n",
+    "            cfg, test_df, threshold_mode, fp16=FP16, threshold_params=threshold_params)\n",
+    "        print(cfg.name, thresholds)\n",
+    "        thresholds_all.append(thresholds)\n",
+    "        model_names.append(cfg.name)\n",
+    "        if icfg == 0:\n",
+    "            results_all = results\n",
+    "        else:\n",
+    "            results_all = results_all.merge(results.drop('site_id', axis=1), on='prediction_id', how='left')\n",
+    "    return results_all, thresholds_all"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ariyasu pipeline mod\n",
+    "test[\"prediction_id\"] = test[\"patient_id\"].astype(str) + \"_\" + test[\"laterality\"]\n",
+    "test['path'] = '/tmp/output/' + test.patient_id.astype(str) + '_' + test.image_id.astype(str) + '.png'"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# config collections\n",
+    "class charm_convnext_small_multi_lat: # LB 0.60\n",
+    "    name = 'charm_convnext_small_multi_lat'\n",
+    "    model_path = \"/kaggle/input/rsna-mammo-convnext-small-multi-lat-2/convnext_small_multi_lat_2\"\n",
+    "\n",
+    "\n",
+    "class charm_convnext_small_multi_view: # LB 0.62\n",
+    "    name = 'charm_convnext_small_multi_view'\n",
+    "    model_path = \"/kaggle/input/rsna-mammo-convnext-small-multi-view/convnext_small_multi_view\"\n",
+    "    \n",
+    "    \n",
+    "class charm_convnext_small_multi_view_2: # LB 0.60\n",
+    "    name = 'charm_convnext_small_multi_view_2'\n",
+    "    model_path = \"/kaggle/input/rsna-mammo-convnext-small-multi-view-2/convnext_small_multi_view_2\"\n",
+    "\n",
+    "    \n",
+    "class charm_convnext_small_multi_lat_1536: # LB ?\n",
+    "    name = 'charm_convnext_small_multi_lat_1536'\n",
+    "    model_path = \"/kaggle/input/rsna-mammo-convnext-small-multi-lat-1536/convnext_small_multi_lat_1536\"\n",
+    "\n",
+    "    \n",
+    "class charm_convnext_base_multi_lat_1024: # LB ?\n",
+    "    name = 'charm_convnext_base_multi_lat_1024'\n",
+    "    model_path = \"/kaggle/input/rsna-mammo-convnext-base-multi-lat-1024/convnext_base_multi_lat_1024\"\n",
+    "\n",
+    "\n",
+    "# cfg = ariyasu_nano_config()\n",
+    "# cfg = ariyasu_nextvit_base_config()\n",
+    "# cfg = ariyasu_xlarge_config()\n",
+    "# cfg = ariyasu_large_config()\n",
+    "\n",
+    "# cfg = IshikeiCkpt04size1536Avg()\n",
+    "# cfg = IshikeiCkpt04size1536Avg()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "FP16 = True\n",
+    "EXTEND = 0\n",
+    "THRESHOLD_MODE = 'value'\n",
+    "DROP_MODE = 'PER_BREAST' # 'PER_PATIENT' To be implemented\n",
+    "kuma = KumaInference()\n",
+    "ishikei = IshikeiInference()\n",
+    "ariyasu = AriyasuInference()\n",
+    "charm = CharmInterface()\n",
+    "\n",
+    "\n",
+    "# # 0.5812973662009894\n",
+    "# ensemble_configs = [ \n",
+    "#     {\n",
+    "#         'configs': [Res02mod3(), charm_convnext_small_multi_lat()],\n",
+    "#         'predictors': [kuma, charm],\n",
+    "#         'global_weights': [1, 1],\n",
+    "#         'drop_rate': 0.9,\n",
+    "#         'criteria': 'low value',\n",
+    "#         'threshold': 'PROPORTIONAL_MEAN_PER_SITE',\n",
+    "#     },\n",
+    "#     {\n",
+    "# #         'configs': [Res02lr0(), IshikeiCkpt07Avg(), IshikeiCkpt04Avg2()],\n",
+    "#         'configs': [IshikeiCkpt07Avg()],\n",
+    "#         'predictors': [ishikei],\n",
+    "#         'global_weights': [1],\n",
+    "#         'drop_rate': 0.5,\n",
+    "#         'criteria': 'low value',\n",
+    "#         'threshold': 'PROPORTIONAL_MEAN_PER_SITE',\n",
+    "#     },\n",
+    "#     {\n",
+    "#         'configs': [ariyasu_nextvit_base_config(), ariyasu_large_config(), ariyasu_xlarge_config()],\n",
+    "#         'predictors': [ariyasu, ariyasu, ariyasu],\n",
+    "#         'global_weights': [3, 3, 2],\n",
+    "#         'drop_rate': None,\n",
+    "#         'criteria': 'low value',\n",
+    "#         'threshold': 'OOF_MEAN_PER_SITE_EASY',\n",
+    "#     },\n",
+    "# ]\n",
+    "\n",
+    "ensemble_configs = [ \n",
+    "    {\n",
+    "        'configs': [Res02mod3(), charm_convnext_small_multi_lat()],\n",
+    "        'predictors': [kuma, charm],\n",
+    "        'global_weights': [1, 1],\n",
+    "        'drop_rate': 0.9,\n",
+    "        'criteria': 'low value',\n",
+    "        'threshold': 'PROPORTIONAL_MEAN_PER_SITE',\n",
+    "    },\n",
+    "    {\n",
+    "#         'configs': [Res02lr0(), IshikeiCkpt07Avg(), IshikeiCkpt04Avg2()],\n",
+    "        'configs': [IshikeiCkpt07Avg(), Res02lr0(), IshikeiCkpt04Avg2()],\n",
+    "        'predictors': [ishikei, kuma, ishikei],\n",
+    "        'global_weights': [1,1,1],\n",
+    "        'drop_rate': 0.5,\n",
+    "        'criteria': 'low value',\n",
+    "        'threshold': 'PROPORTIONAL_MEAN_PER_SITE',\n",
+    "    },\n",
+    "    {\n",
+    "        'configs': [ariyasu_nextvit_base_config(), ariyasu_large_config(), ariyasu_xlarge_config()],\n",
+    "        'predictors': [ariyasu, ariyasu, ariyasu],\n",
+    "        'global_weights': [1, 1, 1],\n",
+    "        'drop_rate': None,\n",
+    "        'criteria': 'low value',\n",
+    "        'threshold': 'OOF_MEAN_PER_SITE_EASY',\n",
+    "    },\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['prediction_id'] = test['patient_id'].astype(str) + '_' + test['laterality']\n",
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test2 = test.copy()\n",
+    "test_agg = test.groupby('prediction_id').agg({'view': 'count'})\n",
+    "weights_all = []\n",
+    "models_all = []\n",
+    "thresholds_all = []\n",
+    "final_results = []\n",
+    "for istage, stage_cfg in enumerate(ensemble_configs):\n",
+    "    print(f'[STAGE {istage}: {len(test2)} records] ')\n",
+    "    \n",
+    "    for cfg in stage_cfg['configs']: # Ariyasu mod\n",
+    "        if hasattr(cfg, 'file_name'):\n",
+    "            cfg.name = cfg.file_name\n",
+    "    \n",
+    "    models_all += [cfg.name for cfg in stage_cfg['configs']]\n",
+    "    weights_all += stage_cfg['global_weights']\n",
+    "    \n",
+    "    results_stage, thresholds_stage = inference_stage(\n",
+    "        stage_cfg['configs'], stage_cfg['predictors'], test2, stage_cfg['threshold'], threshold_params={'total_size': len(test_agg)})\n",
+    "    thresholds_all += thresholds_stage\n",
+    "    if istage == 0:\n",
+    "        results_all = results_stage\n",
+    "    else:\n",
+    "        results_all = results_all.merge(results_stage, on=['prediction_id', 'site_id'], how='inner')\n",
+    "    results_all['cancer'] = weighted_average(results_all[models_all], weights_all)\n",
+    "    if DEBUG:\n",
+    "        print('DEBUG', istage, results_all.shape)\n",
+    "        display(results_all.head())\n",
+    "        print(models_all, weights_all)\n",
+    "        print(thresholds_all)\n",
+    "    \n",
+    "    if stage_cfg['criteria'] == 'low value':\n",
+    "        if stage_cfg['drop_rate'] is not None:\n",
+    "            drop_results = results_all.loc[\n",
+    "                results_all['cancer'] <= np.percentile(results_all['cancer'], stage_cfg['drop_rate']*100)].copy()\n",
+    "            drop_results['cancer'] = 0.\n",
+    "            final_results.append(drop_results)\n",
+    "            test2 = test2.loc[~test2['prediction_id'].isin(drop_results['prediction_id'])]\n",
+    "        else: # final stage\n",
+    "#             thresholds = np.average(np.array(thresholds_all), axis=0, weights=weights_all)\n",
+    "            final_results.append(results_all)\n",
+    "        \n",
+    "    else:\n",
+    "        raise NotImplementedError()\n",
+    "final_results = pd.concat(final_results, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_threshold(ensemble_configs, threshold_mode, final_results=None):\n",
+    "    def merge_all(dfs):\n",
+    "        for i, df in enumerate(dfs):\n",
+    "            if 'target' in df.columns:\n",
+    "                df.drop('target', axis=1, inplace=True)\n",
+    "            if i == 0:\n",
+    "                res = df.rename({'pred': models_all[i]}, axis=1)\n",
+    "            else:\n",
+    "                res = res.merge(df.rename({'pred': models_all[i]}, axis=1), on=['prediction_id', 'fold', 'site_id'], how='left')\n",
+    "        return res.reset_index()\n",
+    "    \n",
+    "    train = pd.read_csv('../input/rsna-misc/train_with_fold.csv').rename({'cancer': 'target'}, axis=1)\n",
+    "    train['prediction_id'] = train['patient_id'].astype(str) + '_' + train['laterality']\n",
+    "    train = train.groupby('prediction_id').agg(\n",
+    "        {'target': 'max', 'fold': 'max', 'difficult_negative_case': 'max'}).reset_index()\n",
+    "    metric = PercentilePfbeta(percentile_range=(97.5, 99.0), n_trials=30)\n",
+    "    \n",
+    "    oof_agg_fold = {0: [], 1: [], 2: [], 3:[]}\n",
+    "    models_all = []\n",
+    "    weights_all = []\n",
+    "    for stage_cfg in ensemble_configs:\n",
+    "        for cfg in stage_cfg['configs']: # Ariyasu mod\n",
+    "            if hasattr(cfg, 'file_name'):\n",
+    "                cfg.name = cfg.file_name\n",
+    "        for cfg, predictor in zip(\n",
+    "            stage_cfg['configs'], stage_cfg['predictors']):\n",
+    "            oof = pd.read_csv(predictor.get_oof_path(cfg))\n",
+    "            models_all.append(cfg.name)\n",
+    "            for fold in range(4):\n",
+    "                oof_agg_fold[fold].append(oof.query('fold == @fold'))\n",
+    "        weights_all += stage_cfg['global_weights']\n",
+    "    thresholds_site1 = []\n",
+    "    thresholds_site2 = []\n",
+    "    print(models_all, weights_all)\n",
+    "    for fold in range(4):\n",
+    "        merged_fold = merge_all(oof_agg_fold[fold]).merge(\n",
+    "            train[['prediction_id', 'target']], on='prediction_id', how='left')\n",
+    "        # display(merged_fold)\n",
+    "        oof_pred = weighted_average(merged_fold[models_all], weights_all)\n",
+    "        oof_target = merged_fold['target'].values\n",
+    "        oof_site = merged_fold['site_id'].values\n",
+    "        score_1, percentile_1, threshold_1 = metric(oof_pred[oof_site == 1], oof_target[oof_site == 1])\n",
+    "        score_2, percentile_2, threshold_2 = metric(oof_pred[oof_site == 2], oof_target[oof_site == 2])\n",
+    "        if threshold_mode == 'value':\n",
+    "            thresholds_site1.append(threshold_1)\n",
+    "            thresholds_site2.append(threshold_2)\n",
+    "        elif threshold_mode == 'proportional':\n",
+    "            thresholds_site1.append(percentile_1)\n",
+    "            thresholds_site2.append(percentile_2)\n",
+    "    if threshold_mode == 'value':\n",
+    "        return [np.mean(thresholds_site1), np.mean(thresholds_site2)]\n",
+    "    elif threshold_mode == 'proportional':\n",
+    "        print(thresholds_site1, thresholds_site2)\n",
+    "        threshold_site1 = np.percentile(\n",
+    "            final_results.query('site_id == 1')['cancer'].values, np.mean(thresholds_site1))\n",
+    "        threshold_site2 = np.percentile(\n",
+    "            final_results.query('site_id == 2')['cancer'].values, np.mean(thresholds_site2))\n",
+    "        return [threshold_site1, threshold_site2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# thresholds = simulate_threshold(ensemble_configs, THRESHOLD_MODE, final_results)\n",
+    "thresholds = [0.28, 0.23]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_results.loc[\n",
+    "    final_results['site_id'] == 1, 'cancer'] = \\\n",
+    "        (final_results.loc[final_results['site_id'] == 1, 'cancer'] > thresholds[0]).astype(float)\n",
+    "final_results.loc[final_results['site_id'] == 2, 'cancer'] = \\\n",
+    "        (final_results.loc[final_results['site_id'] == 2, 'cancer'] > thresholds[1]).astype(float)"
+   ]
   },
   {
    "cell_type": "code",
