--- a/model.ipynb
+++ b/model.ipynb
@@ -2919,21 +2919,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final_results[['prediction_id', 'cancer']].to_csv('submission.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if DEBUG:\n",
+    "    from sklearn.metrics import f1_score\n",
+    "    \n",
+    "    tr=pd.read_csv('/kaggle/input/rsna-breast-cancer-detection/train.csv')\n",
+    "    tr['prediction_id'] = tr.patient_id.astype(str) + '_' + tr.laterality\n",
+    "    df = final_results.merge(tr[['cancer', 'prediction_id']], on='prediction_id')\n",
+    "    print('f1:', f1_score(df.cancer_y, df.cancer_x))   "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!rm *.py\n",
+    "!rm timm segmentation_models_pytorch kuma_utils global_objectives iterstrat\n",
+    "!rm dummy_bbox.csv"
+   ]
   }
  ],
  "metadata": {
