--- a/model.ipynb
+++ b/model.ipynb
@@ -3,95 +3,112 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "import joblib\n",
+    "\n",
+    "# Load dataset (replace 'news_articles.csv' with the path to your dataset)\n",
+    "data = pd.read_csv('news_articles.csv')\n",
+    "\n",
+    "# Data preprocessing\n",
+    "# We'll use the 'text' and 'label' columns for this task\n",
+    "data = data[['text', 'label']].dropna()\n",
+    "\n",
+    "# Splitting data into training and testing sets\n",
+    "X = data['text']\n",
+    "y = data['label']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Text transformation using TF-IDF vectorizer\n",
+    "tfidf_vectorizer = TfidfVectorizer(stop_words='english', max_df=0.7)\n",
+    "X_train_tfidf = tfidf_vectorizer.fit_transform(X_train)\n",
+    "X_test_tfidf = tfidf_vectorizer.transform(X_test)\n",
+    "\n",
+    "# Model training - Logistic Regression\n",
+    "model = LogisticRegression(max_iter=1000)\n",
+    "model.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "# Model evaluation\n",
+    "y_pred = model.predict(X_test_tfidf)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "report = classification_report(y_test, y_pred)\n",
+    "\n",
+    "print(f'Accuracy: {accuracy}')\n",
+    "print('Classification Report:')\n",
+    "print(report)\n",
+    "\n",
+    "# Saving the trained model and TF-IDF vectorizer for future use\n",
+    "joblib.dump(model, 'fake_news_detection_model.pkl')\n",
+    "joblib.dump(tfidf_vectorizer, 'tfidf_vectorizer.pkl')\n",
+    "\n",
+    "print(\"Model and vectorizer saved as 'fake_news_detection_model.pkl' and 'tfidf_vectorizer.pkl'.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
